--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body class="Body">
     <div class="wrapper">
         <header class="head">
+            <span class="topline__logo"></span>
             <div class="title">Будь самым первым в мире новостей</div>
         </header>
         <nav>
