--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="Body">
     <div class="wrapper">
         <header class="head">
-            <span class="topline__logo"></span>
+            <div class="logo"><img class="logo" src= https://s.rbk.ru/v10_rbcnews_static/common/common-10.8.74/styles/blocks/topline/images/logo.svg
             <div class="title">Будь самым первым в мире новостей</div>
         </header>
         <nav>
